test/files/neg/bug278.scala
class C {
  class A
  def a = () => ()
  def a = (p:A) => ()
  a[A]
}
