test/files/neg/bug278.check
bug278.scala:5: error: overloaded method value a with alternatives:
  => C.this.A => Unit <and>
  => () => Unit
 does not take type parameters
  a[A]
  ^
bug278.scala:4: error: method a is defined twice
  def a = (p:A) => ()
      ^
two errors found
